Fix link title overflow issue
Adjusted the padding to fix the issue causing the link titles with more letters to overflow in the navigation.

--- a/site/css/misc.css
+++ b/site/css/misc.css
@@ -19,9 +19,7 @@
       display: inline-block;
       width: 85px;
       padding-top: 8px;
-      padding-bottom: 8px;
-      padding-right: 4px;
-      padding-left: 4px; }
+      padding-bottom: 8px; }
 }
 
 @media only screen and (orientation: portrait) {
